# skyrim-load-accelerator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
cmake/: pluginpackage.cmake
src/: Hooks.cpp  Main.cpp  PCH.h  Plugin.h  Settings.cpp  Settings.h
src/Optimizations/Caching/: FormCache.cpp  FormCache.h
src/Optimizations/Decompression/: LZ4Upgrade.cpp  LZ4Upgrade.h  ZlibReplacement.cpp  ZlibReplacement.h
src/Optimizations/FileIO/: INICaching.cpp  INICaching.h  MaxStdio.cpp  MaxStdio.h  SequentialScan.cpp  SequentialScan.h
src/Optimizations/Memory/: AllocatorReplacement.cpp  AllocatorReplacement.h
src/Optimizations/Threading/: ParallelBSA.cpp  ParallelBSA.h
src/Utils/: Benchmark.cpp  Benchmark.h  IATHook.cpp  IATHook.h  PatternScan.cpp  PatternScan.h
